--- a/index.html
+++ b/index.html
@@ -13,8 +13,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-   <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia ipsa dicta quod inventore laborum sit odio alias molestiae accusamus iusto asperiores temporibus nemo architecto, ipsam repellendus? Officiis inventore nulla sapiente?
-   </p> 
+   <nav>
+        <a href="#" id="logo">
+            <img src="assets/Logo.svg" alt="logo">
+        </a>
+    <ul id="primary-menu">
+        <li>
+            <a href="">
+                <img src="assets/Icons/MagnifyingGlass.svg" alt="lupa">
+            </a>
+        </li>
+        <li><a href="#">Emplorar</a></li>
+        <li><a href="#">Minhas Viagens</a></li>
+        <li><a href="#">Profile</a></li>
+    </ul>
+
+   </nav>
 </body>
 </html>
