--- a/index.html
+++ b/index.html
@@ -13,21 +13,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-   <nav>
-        <a href="#" id="logo">
-            <img src="assets/Logo.svg" alt="logo">
-        </a>
-    <ul id="primary-menu">
-        <li>
-            <a href="">
-                <img src="assets/Icons/MagnifyingGlass.svg" alt="lupa">
+    <div class="bg-surface-color">
+        <nav class="container">
+            <a href="#" id="logo">
+                <img src="assets/Logo.svg" alt="logo">
             </a>
-        </li>
-        <li><a href="#">Emplorar</a></li>
-        <li><a href="#">Minhas Viagens</a></li>
-        <li><a href="#">Profile</a></li>
-    </ul>
-
-   </nav>
+            <ul id="primary-menu">
+                <li>
+                    <a href="">
+                        <img src="assets/Icons/MagnifyingGlass.svg" alt="lupa">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Explorar</a>
+                </li>
+                <li>
+                    <a href="#">Minhas Viagens</a>
+                </li>
+                <li>
+                    <a href="as">
+                        <img src="assets/Profile pic.png" alt="ProfileImage">
+                    </a>
+                </li>
+            </ul>
+         </nav>
+    </div>
 </body>
 </html>
