--- a/index.html
+++ b/index.html
@@ -37,6 +37,34 @@
                 </li>
             </ul>
          </nav>
+         <header>
+             <div class="container">
+                 <div id="profile">
+                     <img src="assets/Profile pic.png" alt="ProfileImage2">
+                     <div>
+                        <h1>Isabela Torres</h1>
+                        <p>
+                           Amante de viagens, cultura e gastronomia. <img src="assets/Icons/MapPin.svg" alt="MapPin"><img src="assets/Icons/AirplaneTilt.svg" alt="AirplaneTilt"><br>
+                           Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. <img src="assets/Icons/Image.svg" alt="Image">
+                        </p>
+                     </div>
+                 </div>
+                 <ul id="info">
+                    <li>
+                        <img src="assets/Icons/MapPin.svg" alt="map">
+                        <span>São Paulo, Brazil</span>
+                    </li>
+                    <li>
+                        <img src="assets/Icons/AirplaneTilt.svg" alt="AirplaneTilt">
+                        <span>37 paises</span>
+                    </li>
+                    <li>
+                        <img src="assets/Icons/Image.svg" alt="Image">
+                        <span>240 fotos</span>
+                    </li>
+                 </ul>
+             </div>
+         </header>
     </div>
 </body>
 </html>
