--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Travelgrama</title>
     
     <link rel="stylesheet" href="style/index.css">
@@ -21,7 +22,7 @@
             </a>
             <ul id="primary-menu">
                 <li>
-                    <a href="">
+                    <a href="#">
                         <img src="assets/Icons/MagnifyingGlass.svg" alt="lupa">
                     </a>
                 </li>
@@ -32,7 +33,7 @@
                     <a href="#">Minhas Viagens</a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="#">
                         <img src="assets/Profile pic.png" alt="ProfileImage">
                     </a>
                 </li>
@@ -66,6 +67,22 @@
                  </ul>
              </div>
          </header>
+         <main>
+            <div>
+                <img src="assets/Images/Image 01.png" alt="...">
+                <img src="assets/Images/Image 02.png" alt="...">
+                <img src="assets/Images/Image 03.png" alt="...">
+                <img src="assets/Images/Image 04.png" alt="...">
+                <img src="assets/Images/Image 05.png" alt="...">
+                <img src="assets/Images/Image 06.png" alt="...">
+                <img src="assets/Images/Image 07.png" alt="...">
+                <img src="assets/Images/Image 08.png" alt="...">
+                <img src="assets/Images/Image 09.png" alt="...">
+                <img src="assets/Images/Image 10.png" alt="...">
+                <img src="assets/Images/Image 11.png" alt="...">
+                <img src="assets/Images/Image 12.png" alt="...">
+            </div>
+         </main>
     </div>
 </body>
 </html>
