--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
                 <img src="assets/Images/Image 12.png" alt="...">
             </div>
          </main>
+         <footer class="container">
+            <span>Travelgram &copy; 2024</span>
+            <span>Termos de uso</span>
+            <span>Política de privacidade</span>
+         </footer>
     </div>
 </body>
 </html>
